<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">快执行</string>
    <string name="app_copyright">版权所有</string>
    <string name="request_error">请求失败</string>
    <string name="request_network_error">网络未开启</string>
    <string name="request_load_end">已全部加载</string>
    <string name="request_timeout">请求超时</string>
    <string name="request_empty">还没有数据。</string>
    <string name="address_search_book_title">搜索通讯录</string>
    <string name="invite_title">邀请新伙伴</string>
    <string name="acceptance_title">验收标准</string>
    <string name="validate_title">确认您的信息</string>
    <string name="date_title">选择日期</string>
    <string name="time_title">选择时间</string>
    <string name="report_title">汇报人</string>
    <string name="create_team_title">创建团队</string>
    <string name="create_team_success">团队创建成功!</string>
    <string name="create_team_invite_success">邀请伙伴</string>
    <string name="create_team_ok_success">好</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search_hint">搜索关键字</string>
    <string name="message_box_title">消息盒子</string>
    <string name="team_tip_title">	您还没有获得任何勋章，你想享受拥有万众举目的崇拜目光吗？高效执行，快乐工作,集多种荣誉为一身，赶紧行动吧！</string>
    <string name="name_hint">姓名:</string>
    <string name="input_name_hint">请输入姓名</string>
    <string name="phone_hint">手机:</string>
    <string name="input_phone_hint">请输入手机号</string>
    <string name="input_true_phone_hint">请输入正确手机号</string>
    <string name="input_team_hint">请输入团队名称</string>
    <string name="email_hint">邮箱:</string>
    <string name="read_hint">已读</string>
    <string name="noread_hint">未读</string>
    <string name="input_email_hint">请输入邮箱</string>
    <string name="department_hint">部门:</string>
    <string name="huijibaoren_hint">汇报人:</string>
    <string name="input_code_hint">请输入验证码</string>
    <string name="get_code_hint">获取验证码</string>
    <string name="input_newpwd_hint">输入新密码</string>
    <string name="input_renewpwd_hint">再输入新密码</string>
    <string name="seek_done_100_hint">请确认[验收标准]已勾选</string>
    <string name="input_username_hint">手机号</string>
    <string name="input_medal_title_hint">请输入勋章标题</string>
    <string name="input_medal_reason_hint">请输入获奖理由</string>
    <string name="input_password_hint">密码</string>
    <string name="input_codes_hint">验证码</string>
    <string name="contact_phone_hint">电话联系</string>
    <string name="input_department_hint">输入部门</string>
    <string name="leaver_team">离开我的团队</string>
    <string name="create_team">创建我的团队</string>
    <string name="default_my_team">我的团队</string>
    <string name="upload_success">图片上传成功</string>
    <string name="upload_error">未找到存储卡，无法存储照片！</string>
    <string name="upload_max_length">最多3张</string>
    <string name="task_target_amount">个关联目标</string>
    <string name="task_client_amount">个关联客户</string>
    <string name="task_content_hint">请填写任务内容</string>
    <string name="task_input_title_hint">请填写任务标题</string>
    <string name="task_execution_hint">请选择执行人</string>
    <string name="task_cycle_hint">完成周期不能为空</string>
    <string name="task_wait_more">等</string>
    <string name="task_person_more">人</string>
    <string name="task_day">天</string>
    <string name="file_size">大小:</string>
    <string name="file_name">文件:</string>
    <string name="file_url">获取下载地址...</string>
    <string name="please_selected">请选择</string>
    <string name="cycle_end_hint">结束时间不正确</string>
    <string name="input_taskprocess_hint">请填写反馈内容</string>
    <string name="taskprocess_success">反馈成功</string>
    <string name="search">搜索</string>
    <string name="task_count">%1$d个任务</string>
    <string name="select_sure">确定(%1$d)</string>
    <string name="chaoqi_day">超期:%1$d天</string>
    <string name="day">%1$d天</string>
    <string name="day_bantian">半天</string>
    <string name="done_count">完成:%s%</string>
    <string name="zaiban_count">在办:%s</string>
    <string name="renwu_count">任务:%s</string>
    <string name="acceptance">验收标准:%s</string>
    <string name="notice_user">发布人:%s</string>
    <string name="send_phone_hint">%s的验证码</string>
    <string name="zongrenwu_count">总任务:%s</string>
    <string name="zhixingrenwu_count">执行任务:%s</string>
    <string name="faqirenwu_count">发起任务:%s</string>
    <string name="daipingjia_count">待评价:%s</string>
    <string name="shengyu_day">剩余:%1$d天</string>
    <string name="shengyu_bantian_day">剩余:半天</string>
    <string name="zerenren_count">责任人:%1$d位</string>
    <string name="client_name">客户:%s</string>
    <string name="client_phone">电话:%s</string>
    <string name="name_workspace">%s的任务</string>
    <string name="name_message">%s的消息</string>
    <string name="get_again">重新获取</string>
    <string name="add_target_tip">请于网页端进行新增操作</string>
    <string name="yanshou_title">验收</string>
    <string name="pingjia_title">是否好评</string>
    <string name="taskprocess_empty">任务还没有反馈</string>
    <string name="get_pwd_title">找回密码</string>
    <string name="register_title">免注册登录</string>
    <string name="about_title">关于快执行</string>
    <string name="term_settings_title">团队设置</string>
    <string name="seek_bar_state_1">未开始</string>
    <string name="seek_bar_state_2">已启动</string>
    <string name="seek_bar_state_3">已过半</string>
    <string name="seek_bar_state_4">快完成</string>
    <string name="seek_bar_state_5">已完成</string>
    <string name="seek_bar_state">进度</string>
    <string name="validate_phone">电话格式不正确</string>
    <string name="validate_phone_code">验证码不正确</string>
    <string name="validate_pwd">密码不正确</string>
    <string name="validate_repwd">重复密码不正确</string>
    <string name="refuse_invite">拒绝邀请</string>
    <string name="accept_invite">接受邀请</string>
    <string name="login_hint">登录</string>
    <string name="noregister_login_hint">免注册登录</string>
    <string name="forget_pwd_hint">忘记密码?</string>
    <string name="send_hint">发送</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_contact">联系客服</string>
    <string name="alert_dialog_close">关闭</string>
    <string name="alert_dialog_retry">重试</string>
    <string name="alert_dialog_login">登录</string>
    <string name="alert_dialog_update">下载</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="alert_dialog_post">提交</string>
    <string name="alert_dialog_logout">确定要登出?</string>
    <string name="alert_dialog_exit">确定要退出?</string>
    <string name="alert_dialog_invite">是否邀请?</string>
    <string name="alert_dialog_invite_2">是否邀请新成员进来?</string>
    <string name="alert_dialog_cancel_task">确定要取消该任务?</string>
    <string name="alert_dialog_out">确定要离开?</string>
    <string name="alert_dialog_contiue">添加并继续</string>
    <string name="alert_dialog_add">确认添加</string>
    <string name="preferences_amount">账户</string>
    <string name="preferences_version">版本</string>
    <string name="preferences_about">关于</string>
    <string name="login_empty">还未登录</string>
    <string name="leave_team_title">确定要离开团队?</string>
    <string name="preference_key_next_check_update_time">next_check_update_time</string>
    <string name="preference_key_skip_check_update_version_code">skip_check_update_version_code</string>
    <string name="preference_name">android_autoupdate_preference</string>
    <string name="autoupdate_update_tips">更新提示</string>
    <string name="autoupdate_confirm">确定</string>
    <string name="autoupdate_cancel">取消</string>
    <string name="autoupdate_skip">忽略</string>
    <string name="autoupdate_no_update">当前已是最新版本</string>
    <string name="textOn">ON</string>
    <string name="textOff">OFF</string>
    <string name="prompt">提示</string>
    <string name="exit_app">你确定要退出应用吗?</string>
    <string name="done_cycle">到期时间</string>
    <string name="confirm">确定</string>
    <string name="call">拨打</string>
    <string name="getConfirm">马上获取</string>
    <string name="confirm_update">更新</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="files">Files</string>
    <string name="directories">Folders</string>
    <string name="goUp">Go Up</string>
    <string name="all">选择全部</string>
    <string name="none">取消全部</string>
    <string name="picker_cancel">取消</string>
    <string name="picker_set">确定</string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="seconds_label">s</string>
    <string name="hours_label_description">hours</string>
    <string name="minutes_label_description">minutes</string>
    <string name="seconds_label_description">seconds</string>
    <string name="timer_delete">删除</string>
    <string name="time_picker_ampm_label">--</string>
    <string name="time_picker_time_seperator">:</string>
    <string name="time_picker_00_label">:00</string>
    <string name="time_picker_30_label">:30</string>
    <string name="number_picker_minus_label">—</string>
    <string name="number_picker_seperator">.</string>
    <string name="number_delete">删除</string>
    <string name="number_picker_plus_minus">+/-</string>
    <string name="hms_picker_hours_label">H</string>
    <string name="hms_picker_minutes_label">M</string>
    <string name="hms_picker_seconds_label">S</string>
    <string name="expiration_picker_seperator">/</string>
    <string name="month_c">MONTH</string>
    <string name="day_c">DAY</string>
    <string name="year_c">YEAR</string>
    <string name="min_error">Please input a number greater than or equal to %1$d</string>
    <string name="max_error">Please input a number less than or equal to %1$d</string>
    <string name="min_max_error">Please input a number between %1$d and %2$d</string>
    <string name="done_label">完成</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="select_hours">选择小时</string>
    <string name="select_minutes">选择分钟</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="deleted_key">%1$s deleted</string>
    <string name="time_placeholder">--</string>
    <string name="time_separator">:</string>
    <string name="radial_numbers_typeface">sans-serif</string>
    <string name="sans_serif">sans-serif</string>
    <string name="day_of_week_label_typeface">sans-serif</string>
    <string-array name="avatar">
        <item>获取图库照片</item>
        <item>拍照获取图片</item>
    </string-array>
    <string name="file_max_hint">最多3个附件</string>
    <string name="file_folder_hint">当前目录:</string>
    <string name="client_select_title_hint">选择客户</string>
    <string name="client_sure_hint">客户确认</string>
    <string name="client_phone_hint">电话号码</string>
    <string name="call_phone_hint">确定要呼叫?</string>
    <string name="client_name_hint">姓名</string>
    <string name="client_input_phone_hint">输入客户电话号码</string>
    <string name="client_input_name_hint">输入客户姓名</string>
    <string name="client_tab_tongxunlu_hint">通讯录</string>
    <string name="client_tab_input_hint">手动输入</string>
    <string name="drawer_workbench_hint">工作台</string>
    <string name="drawer_partner_hint">我的伙伴</string>
    <string name="drawer_strategic_hint">战略目标</string>
    <string name="drawer_member_hint">全体成员</string>
    <string name="drawer_incentive_hint">激励认可</string>
    <string name="drawer_notice_hint">团队公告</string>
    <string name="drawer_service_hint">服务商</string>
    <string name="drawer_settings_hint">设置</string>
    <string name="about_grade_hint">去评分</string>
    <string name="about_tel_hint">电话:</string>
    <string name="about_tel_text">0591-63123239</string>
    <string name="name_edit_hint">请输入姓名</string>
    <string name="phone_edit_hint">请输入手机号</string>
</resources>