<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fileSelectionContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/action_bar_bg_task" >

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/actionbar_selector"
            android:padding="12dp"
            android:src="@drawable/nav_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/grid_selector"
            android:gravity="center"
            android:text="@string/file_max_hint"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionBar"
        android:padding="6dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_folder_hint"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/folderpath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="right|center"
            android:singleLine="true"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <ListView
        android:id="@+id/directorySelectionList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomAction"
        android:layout_below="@+id/folder"
        android:choiceMode="multipleChoice"
        android:fadingEdge="none"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:scrollbars="none"
        android:scrollingCache="false"
        android:smoothScrollbar="true" />

    <LinearLayout
        android:id="@+id/bottomAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="8dp" >

        <Button
            android:id="@+id/all"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:visibility="gone" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:padding="8dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_blue_send"
            android:padding="8dp"
            android:text="@string/ok"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>