<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/d_bg" >

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/validate_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/nameTv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTv"
            android:layout_margin="10dp"
            android:background="@drawable/abs__textfield_searchview_holo_light"
            android:gravity="left|center"
            android:hint="@string/name_edit_hint"
            android:paddingBottom="8dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#444" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/phoneTv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTv"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/abs__textfield_searchview_holo_light"
            android:enabled="false"
            android:gravity="left|center"
            android:hint="@string/phone_edit_hint"
            android:paddingBottom="8dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#444" >
        </EditText>

        <RelativeLayout
            android:id="@+id/codeview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneTv"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp" >

            <EditText
                android:id="@+id/codeTv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/abs__textfield_searchview_holo_light"
                android:gravity="left|center"
                android:hint="@string/input_code_hint"
                android:inputType="number"
                android:paddingBottom="8dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#444" >
            </EditText>

            <TextView
                android:id="@+id/codeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#777777" />
        </RelativeLayout>

        <TextView
            android:id="@+id/btnSure"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/codeview"
            android:background="@drawable/grid_selector2"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/alert_dialog_ok"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#444444" />
    </RelativeLayout>

</RelativeLayout>